cmake_minimum_required(VERSION 3.23)
project(Game)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(CMAKE_AUTORCC ON)
find_package(Qt5Core)
find_package(SFML 2.5 COMPONENTS graphics audio REQUIRED)
add_executable(Game main.cpp Block.cpp Block.h creatures/Hero.cpp creatures/Hero.h resource.qrc Object.cpp Object.h Projectile.cpp Projectile.h creatures/Creature.cpp creatures/Creature.h Map.cpp Map.h)
target_link_libraries(Game sfml-graphics sfml-window sfml-system Qt5::Core)
